# strategy_runner

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/strategyrunner/: cli.py  config.py  models.py
src/strategyrunner/data/: base.py  yahoo.py
src/strategyrunner/pipelines/: daily.py
src/strategyrunner/state/: __init__.py
src/strategyrunner/strategies/: crossover.py  momentum.py
src/strategyrunner/utils/: calendars.py  constants.py  logging.py  webhooks.py
tests/: test_config.py  test_config_example.py  test_crossover.py  test_data_base.py  test_integration_pipeline.py  test_models.py  test_momentum.py  test_pipeline_helpers.py  test_wireup.py
